--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/resources/assets/js/public/hs/libs.js": "/resources/assets/js/public/hs/libs.js",
+    "/js/libs.js": "/js/libs.js",
     "/css/libs.css": "/css/libs.css"
 }
